css/about.css
.about {
    margin: 40px;
}

.title {
    text-align: center;
    margin: 30px 0px;
}

.email-btn {
    background-color: var(--links);
    color: white;
    border: none;
    width: 50px;
    height: 20px;
}

.sign-up {
    text-align: center;
}

@media (min-width: 1024px) {

    .about {
        margin: 20px 250px;
    }
}

